objects/engage_reports__Engage_Send__c.object
<CustomObject>
    <fields>
        <fullName>DB_Days__c</fullName>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engage_reports__Composite_Key__c</fullName>
        <externalId>true</externalId>
        <label>Pardot Source Id</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>engage_reports__Engage_Email_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engage Email Template</label>
        <referenceTo>engage_reports__Engage_Email_Template__c</referenceTo>
        <relationshipLabel>Engage Sends</relationshipLabel>
        <relationshipName>Engage_Sends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>engage_reports__Sent_At__c</fullName>
        <label>Sent At</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>engage_reports__Total_Hard_Bounces__c</fullName>
        <label>Total Hard Bounces</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engage_reports__Total_Sends__c</fullName>
        <label>Total Sends</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engage_reports__Total_Soft_Bounces__c</fullName>
        <label>Total Soft Bounces</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engage_reports__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engage Campaigns</fullName>
                </value>
                <value>
                    <fullName>Engage for Outlook</fullName>
                </value>
                <value>
                    <fullName>Engage for Gmail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Engage Send</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>engage_reports__Engage_Email_Template__c</columns>
        <columns>engage_reports__Total_Hard_Bounces__c</columns>
        <columns>engage_reports__Total_Sends__c</columns>
        <columns>engage_reports__Total_Soft_Bounces__c</columns>
        <columns>engage_reports__Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>engage_reports__Sent_At__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Engage Send Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engage Sends</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>